tests/macro_attributes/dim/04-undefined.stderr
error: Failed to match the provided generic `D`. Expected `< .. , const D : usize, .. >`.
 --> tests/struct_attributes/dim/04-undefined.rs:3:1
  |
3 | #[lazy_nd(dim = D)]
  | ^^^^^^^^^^^^^^^^^^^
  |
  = note: this error originates in the attribute macro `lazy_nd` (in Nightly builds, run with -Z macro-backtrace for more info)
